-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.1
-
None
-
Windows 7, MSVC 2017 and MinGw 7.3. Fast 8-core CPU (i7-7820X @3.6GHz), 64GB RAM, NVIDIA GTX970 GPU.
-
-
e0d80167c18b5a71acf4dac59f3e6f37292fa397 (qt/qtbase/5.14)
At least some part of event processing seems to "pause" (or hang) when a tooltip is first shown.
Please run attached example and hover over the first label. When the tooltip appears, the animation on the label below it should pause for a second or so.
I used a QPropertyAnimation for the demo because that's when I first noticed the issue with my app. I first tried with a blinking cursor and then an animated GIF inside a QMovie (on a QLabel), but neither of those seem affected. So I'm not sure what exactly is affected by this issue (GUI events in general or something specific to animations).
Qt 5.12.x doesn't do this (I haven't tried 5.13).
Reproduced with MSVC 2017 and MinGW 7.3, in both Debug and Release modes.
No observed issues on Linux.
- is duplicated by
-
QTBUG-83004 Tooltips and ComboBox dropdown animation stutter on Windows
-
- Closed
-
-
QTBUG-83151 Animation freezes midway when triggered from the notification area (system tray) icon
-
- Closed
-
- relates to
-
QTBUG-82536 Menus are slow to open
-
- Closed
-
-
QTBUG-77464 [REG] Window movement stalls in animated Qt Quick applications on Windows
-
- Closed
-
-
QTBUG-83211 Context menus not refreshed properly
-
- Closed
-
-
QTBUG-83158 WM_QT_SENDPOSTEDEVENTS suppresses MFC's idle processing
-
- Closed
-
-
QTBUG-85676 Issue with openUrlExternally
-
- Closed
-
For Gerrit Dashboard: QTBUG-82701 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
294403,5 | QEventDispatcherWin32: fix posted events delivering | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |